docs/api/qiskit/0.33/qiskit.pulse.library.Gaussian.mdx
---
title: Gaussian (v0.33)
description: API reference for qiskit.pulse.library.Gaussian in qiskit v0.33
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.pulse.library.Gaussian
---

# Gaussian

<Class id="qiskit.pulse.library.Gaussian" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.19/qiskit/pulse/library/parametric_pulses.py" signature="Gaussian(duration, amp, sigma, name=None, limit_amplitude=None)" modifiers="class">
  Bases: `qiskit.pulse.library.parametric_pulses.ParametricPulse`

  A truncated pulse envelope shaped according to the Gaussian function whose mean is centered at the center of the pulse (duration / 2):

$$
f(x) = amp * exp( -(1/2) * (x - duration/2)^2 / sigma^2 )  ,  0 <= x < duration
$$

  Initialize the gaussian pulse.

  **Parameters**

  *   **duration** (`Union`\[`int`, `ParameterExpression`]) – Pulse length in terms of the the sampling period dt.
  *   **amp** (`Union`\[`complex`, `ParameterExpression`]) – The amplitude of the Gaussian envelope.
  *   **sigma** (`Union`\[`float`, `ParameterExpression`]) – A measure of how wide or narrow the Gaussian peak is; described mathematically in the class docstring.
  *   **name** (`Optional`\[`str`]) – Display name for this pulse envelope.
  *   **limit\_amplitude** (`Optional`\[`bool`]) – If `True`, then limit the amplitude of the waveform to 1. The default is `True` and the amplitude is constrained to 1.

  ## Methods

  <span id="qiskit-pulse-library-gaussian-draw" />

  ### draw

  <Function id="qiskit.pulse.library.Gaussian.draw" signature="Gaussian.draw(style=None, backend=None, time_range=None, time_unit='dt', show_waveform_info=True, plotter='mpl2d', axis=None)">
    Plot the interpolated envelope of pulse.

    **Parameters**

    *   **style** (`Optional`\[`Dict`\[`str`, `Any`]]) – Stylesheet options. This can be dictionary or preset stylesheet classes. See `IQXStandard`, `IQXSimple`, and `IQXDebugging` for details of preset stylesheets.

    *   **backend** (*Optional\[*[*BaseBackend*](qiskit.providers.BaseBackend "qiskit.providers.BaseBackend")*]*) – Backend object to play the input pulse program. If provided, the plotter may use to make the visualization hardware aware.

    *   **time\_range** (`Optional`\[`Tuple`\[`int`, `int`]]) – Set horizontal axis limit. Tuple `(tmin, tmax)`.

    *   **time\_unit** (`str`) – The unit of specified time range either `dt` or `ns`. The unit of `ns` is available only when `backend` object is provided.

    *   **show\_waveform\_info** (`bool`) – Show waveform annotations, i.e. name, of waveforms. Set `True` to show additional information about waveforms.

    *   **plotter** (`str`) –

        Name of plotter API to generate an output image. One of following APIs should be specified:

        ```python
        mpl2d: Matplotlib API for 2D image generation.
            Matplotlib API to generate 2D image. Charts are placed along y axis with
            vertical offset. This API takes matplotlib.axes.Axes as `axis` input.
        ```

        axis and style kwargs may depend on the plotter.

    *   **axis** (`Optional`\[`Any`]) – Arbitrary object passed to the plotter. If this object is provided, the plotters use a given `axis` instead of internally initializing a figure object. This object format depends on the plotter. See plotter argument for details.

    **Returns**

    Visualization output data. The returned data type depends on the `plotter`. If matplotlib family is specified, this will be a `matplotlib.pyplot.Figure` data.
  </Function>

  <span id="qiskit-pulse-library-gaussian-get-waveform" />

  ### get\_waveform

  <Function id="qiskit.pulse.library.Gaussian.get_waveform" signature="Gaussian.get_waveform()">
    Return a Waveform with samples filled according to the formula that the pulse represents and the parameter values it contains.

    **Return type**

    `Waveform`
  </Function>

  <span id="qiskit-pulse-library-gaussian-is-parameterized" />

  ### is\_parameterized

  <Function id="qiskit.pulse.library.Gaussian.is_parameterized" signature="Gaussian.is_parameterized()">
    Return True iff the instruction is parameterized.

    **Return type**

    `bool`
  </Function>

  <span id="qiskit-pulse-library-gaussian-validate-parameters" />

  ### validate\_parameters

  <Function id="qiskit.pulse.library.Gaussian.validate_parameters" signature="Gaussian.validate_parameters()">
    Validate parameters.

    **Raises**

    [**PulseError**](pulse#qiskit.pulse.PulseError "qiskit.pulse.PulseError") – If the parameters passed are not valid.

    **Return type**

    `None`
  </Function>

  ## Attributes

  ### amp

  <Attribute id="qiskit.pulse.library.Gaussian.amp">
    The Gaussian amplitude.

    **Return type**

    `Union`\[`complex`, `ParameterExpression`]
  </Attribute>

  ### id

  <Attribute id="qiskit.pulse.library.Gaussian.id">
    Unique identifier for this pulse.

    **Return type**

    `int`
  </Attribute>

  ### limit\_amplitude

  <Attribute id="qiskit.pulse.library.Gaussian.limit_amplitude" attributeValue="True" />

  ### parameters

  <Attribute id="qiskit.pulse.library.Gaussian.parameters">
    **Return type**

    `Dict`\[`str`, `Any`]
  </Attribute>

  ### sigma

  <Attribute id="qiskit.pulse.library.Gaussian.sigma">
    The Gaussian standard deviation of the pulse width.

    **Return type**

    `Union`\[`float`, `ParameterExpression`]
  </Attribute>
</Class>

